# SpacialDSAEngine

./: .gitignore  CMakeLists.txt  README.md  run.bat  run_tests.bat
.github/workflows/: ci.yml  msbuild.yml
cmake/: ImportDependencies.cmake
projects/: imgui.ini
projects/project-1/include/: cube.hpp  irenderable.hpp  shader.hpp
projects/project-1/shaders/: ColorVertexShader.vert
projects/project-1/src/: cube.cpp  main.cpp  shader.cpp
projects/w.qua-project-1/: README.txt
projects/w.qua-project-1/include/: Buffer.hpp  Camera.hpp  CollisionSystem.hpp  Components.hpp  Cube.hpp  CubeRenderer.hpp  DemoScene.hpp  FPSCameraSystem.hpp  IRenderable.hpp  ImGuiManager.hpp  InputSystem.hpp  Intersection.hpp  Keybinds.hpp  Lighting.hpp  ObjectManipulationSystem.hpp  PlaneRenderer.hpp  Primitives.hpp  RayRenderer.hpp  Registry.hpp  RenderSystem.hpp  Shader.hpp  SphereRenderer.hpp  Systems.hpp  TriangleRenderer.hpp  Window.hpp  pch.h
projects/w.qua-project-1/shaders/: my-project-1.frag  my-project-1.vert  phong.frag  phong.vert
projects/w.qua-project-1/src/: Buffer.cpp  Camera.cpp  CollisionSystem.cpp  Components.cpp  Cube.cpp  CubeRenderer.cpp  DemoScene.cpp  FPSCameraSystem.cpp  ImGuiManager.cpp  InputSystem.cpp  Intersection.cpp  Lighting.cpp  ObjectManipulationSystem.cpp  PlaneRenderer.cpp  Primitives.cpp  RayRenderer.cpp  Registry.cpp  RenderSystem.cpp  Shader.cpp  SphereRenderer.cpp  Systems.cpp  TriangleRenderer.cpp  Window.cpp  main.cpp
projects/w.qua-project-2/: README.txt
projects/w.qua-project-2/include/: Buffer.hpp  CameraSystem.hpp  CollisionSystem.hpp  Components.hpp  CubeRenderer.hpp  DemoScene.hpp  EventSystem.hpp  FrustumRenderer.hpp  Geometry.hpp  IRenderable.hpp  ImGuiManager.hpp  InputSystem.hpp  Intersection.hpp  Keybinds.hpp  Lighting.hpp  MeshRenderer.hpp  ObjectManipulationSystem.hpp  PlaneRenderer.hpp  Primitives.hpp  RayRenderer.hpp  Registry.hpp  RenderSystem.hpp  ResourceSystem.hpp  Shader.hpp  Shapes.hpp  SphereRenderer.hpp  Systems.hpp  TriangleRenderer.hpp  Window.hpp  pch.h
projects/w.qua-project-2/shaders/: my-project-2.frag  my-project-2.vert  wireframe.geom
projects/w.qua-project-2/src/: CameraSystem.cpp  CollisionSystem.cpp  Components.cpp  CubeRenderer.cpp  DemoScene.cpp  EventSystem.cpp  FrustumRenderer.cpp  Geometry.cpp  ImGuiManager.cpp  InputSystem.cpp  MeshRenderer.cpp  PickingSystem.cpp  Primitives.cpp  RenderSystem.cpp  ResourceSystem.cpp  Shapes.cpp  SphereRenderer.cpp  Systems.cpp  main.cpp
projects/w.qua-project-3/: README.txt
projects/w.qua-project-3/include/: Buffer.hpp  Bvh.hpp  CameraSystem.hpp  Components.hpp  DemoScene.hpp  EventSystem.hpp  Geometry.hpp  ImGuiManager.hpp  MeshRenderer.hpp  PickingSystem.hpp  PlaneRenderer.hpp  Registry.hpp  RenderSystem.hpp  Systems.hpp  TriangleRenderer.hpp  Window.hpp  pch.h
projects/w.qua-project-3/shaders/: my-project-3.frag  my-project-3.vert
projects/w.qua-project-3/src/: Bvh.cpp  CameraSystem.cpp  Components.cpp  CubeRenderer.cpp  DemoScene.cpp  EventSystem.cpp  FrustumRenderer.cpp  ImGuiManager.cpp  PickingSystem.cpp  RayRenderer.cpp  RenderSystem.cpp  ResourceSystem.cpp  Shapes.cpp  SphereRenderer.cpp  Systems.cpp  Window.cpp  main.cpp
projects/w.qua-project-4/: README.txt
projects/w.qua-project-4/include/: CameraSystem.hpp  DemoScene.hpp  IRenderable.hpp  ImGuiManager.hpp  KDTree.hpp  Keybinds.hpp  Octree.hpp  PickingSystem.hpp  RenderSystem.hpp  ResourceSystem.hpp  Shapes.hpp  SpatialTreeUtils.hpp
projects/w.qua-project-4/src/: CameraSystem.cpp  Components.cpp  DemoScene.cpp  Geometry.cpp  ImGuiManager.cpp  InputSystem.cpp  KDTree.cpp  MeshRenderer.cpp  Octree.cpp  PickingSystem.cpp  RenderSystem.cpp  ResourceSystem.cpp  Shader.cpp  Shapes.cpp  Systems.cpp  main.cpp
projects/w.qua-project-4/tests/: TestGeometry.cpp  TestKDTree.cpp  TestOctree.cpp  TestShapes.cpp
